--- a/index.html
+++ b/index.html
@@ -206,40 +206,40 @@
         <div class="col-full">
             <h2><a id="pc"></a>Program Committee (in progress)</h2>
             <ul>
-<li> Shubhangi Agarwal, Université Lyon 1, France </li> 
-<li>  Renzo Angles, Universidad de Talca, Chile </li> 
-<li>  Amitabha Bagchi, Indian Institute of Technology, India </li> 
-<li>  Srikanta Bedathur, Indian Institute of Technology, India </li> 
-<li>  Kaustubh Beedkar, Indian Institute of Technology, India </li> 
-<li>  Yang Cao, University of Edinburgh, UK </li> 
-<li>  James Clarkson, Neo4j, USA </li> 
-<li>  Lisa Ehrlinger, Hasso-Plattner-Institut, Germany </li> 	 
-<li>  Lorena Etcheverry, Universidad de la República, Uruguay </li> 
-<li>  Sainyam Galhotra, Cornell University, USA </li>
-<li>  Amélie Gheerbrant, Université de Paris, IRIF, CNRS, France </li> 
-<li>  Paul Groth, University of Amsterdam, The Netherlands </li> 
-<li>  Jan Hidders, Birkbeck College, University of London, UK </li> 
-<li>  Panagiotis Karras, University of Copenhagen, Denmark </li> 
-<li>  Haridimos Kondylakis, ICS-FORTH, Greece </li> 
-<li>  Longbin Lai, Alibaba Group, China </li> 
-<li>  Ioana Manolescu, INRIA, Institut Polytechnique de Paris, France </li> 
-<li>  Victor Marsault, Université Gustave Eiffel, CNRS, LIGM, France </li> 
-<li>  Andrea Mauri, Université Lyon 1, CNRS, LIRIS, France </li> 
-<li>  Amine Mhedhbi, École Polytechnique de Montréal, Canada </li> 
-<li>  Davide Mottin, Aarhus University, Denmark </li> 
-<li>  Serafeim Papadias, TU Berlin, Germany </li> 
-<li>  Marcus Paradies, Ludwig-Maximilians-Universität München, Germany </li> 
-<li>  Liat Peterfreund, Hebrew University, RelationalAI, Israel </li> 
-<li>  Evaggelia Pitoura, University of Ioannina, Greece </li> 
-<li>  Yuya Sasaki, Osaka University, Japan </li> 
-<li>  Semih Salihoglu, University of Waterloo, Kùzu, Canada </li> 
-<li>  Petra Selmer, Bloomberg, UK </li> 
-<li>  Dominik Tomaszuk, University of Bialystok, Poland </li> 
-<li>  Riccardo Tommasini, INSA Lyon, CNRS, LIRIS, France </li> 
-<li>  Georgia Troullinou, Université Grenoble Alpes, France </li> 
-<li>  Ana Lucia Varbanescu, University of Amsterdam, The Netherlands </li> 
-<li>  Genoveva Vargas-Solar, CNRS, Université Lyon 1, LIRIS, France </li> 
-<li>  Nikolay Yakovets, Eindhoven University of Technology, The Netherlands </li> 
+<li>  <b>Shubhangi Agarwal</b>, Université Lyon 1, France </li> 
+<li>  <b>Renzo Angles</b>, Universidad de Talca, Chile </li> 
+<li>  <b>Amitabha Bagchi</b>, Indian Institute of Technology, India </li> 
+<li>  <b>Srikanta Bedathur</b>, Indian Institute of Technology, India </li> 
+<li>  <b>Kaustubh Beedkar</b>, Indian Institute of Technology, India </li> 
+<li>  <b>Yang Cao</b>, University of Edinburgh, UK </li> 
+<li>  <b>James Clarkson</b>, Neo4j, USA </li> 
+<li>  <b>Lisa Ehrlinger</b>, Hasso-Plattner-Institut, Germany </li> 	 
+<li>  <b>Lorena Etcheverry</b>, Universidad de la República, Uruguay </li> 
+<li>  <b>Sainyam Galhotra</b>, Cornell University, USA </li>
+<li>  <b>Amélie Gheerbrant</b>, Université de Paris, IRIF, CNRS, France </li> 
+<li>  <b>Paul Groth</b>, University of Amsterdam, The Netherlands </li> 
+<li>  <b>Jan Hidders</b>, Birkbeck College, University of London, UK </li> 
+<li>  <b>Panagiotis Karras</b>, University of Copenhagen, Denmark </li> 
+<li>  <b>Haridimos Kondylakis</b>, ICS-FORTH, Greece </li> 
+<li>  <b>Longbin Lai</b>, Alibaba Group, China </li> 
+<li>  <b>Ioana Manolescu</b>, INRIA, Institut Polytechnique de Paris, France </li> 
+<li>  <b>Victor Marsault</b>, Université Gustave Eiffel, CNRS, LIGM, France </li> 
+<li>  <b>Andrea Mauri</b>, Université Lyon 1, CNRS, LIRIS, France </li> 
+<li>  <b>Amine Mhedhbi</b>, École Polytechnique de Montréal, Canada </li> 
+<li>  <b>Davide Mottin</b>, Aarhus University, Denmark </li> 
+<li>  <b>Serafeim Papadias</b>, TU Berlin, Germany </li> 
+<li>  <b>Marcus Paradies</b>, Ludwig-Maximilians-Universität München, Germany </li> 
+<li>  <b>Liat Peterfreund</b>, Hebrew University, RelationalAI, Israel </li> 
+<li>  <b>Evaggelia Pitoura</b>, University of Ioannina, Greece </li> 
+<li>  <b>Yuya Sasaki</b>, Osaka University, Japan </li> 
+<li>  <b>Semih Salihoglu</b>, University of Waterloo, Kùzu, Canada </li> 
+<li>  <b>Petra Selmer</b>, Bloomberg, UK </li> 
+<li>  <b>Dominik Tomaszuk</b>, University of Bialystok, Poland </li> 
+<li>  <b>Riccardo Tommasini</b>, INSA Lyon, CNRS, LIRIS, France </li> 
+<li>  <b>Georgia Troullinou</b>, Université Grenoble Alpes, France </li> 
+<li>  <b>Ana Lucia Varbanescu</b>, University of Amsterdam, The Netherlands </li> 
+<li>  <b>Genoveva Vargas-Solar</b>, CNRS, Université Lyon 1, LIRIS, France </li> 
+<li>  <b>Nikolay Yakovets</b>, Eindhoven University of Technology, The Netherlands </li> 
 
        </ul>
         </div>
