--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
   <section class="row">
         <div class="col-full">
-            <h2><a id="pc"></a>Program Committee (in progress)</h2>
+            <h2><a id="pc"></a>Program Committee</h2>
             <ul>
 <li>  <b>Shubhangi Agarwal</b>, Université Lyon 1, France </li> 
 <li>  <b>Renzo Angles</b>, Universidad de Talca, Chile </li> 
