--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 <li>  <b>Kaustubh Beedkar</b>, Indian Institute of Technology, India </li> 
 <li>  <b>Yang Cao</b>, University of Edinburgh, UK </li> 
 <li>  <b>James Clarkson</b>, Neo4j, USA </li> 
+<li>  <b>Sourav Dutta</b>, Huawei Research, Ireland </li> 
 <li>  <b>Lisa Ehrlinger</b>, Hasso-Plattner-Institut, Germany </li> 	 
 <li>  <b>Lorena Etcheverry</b>, Universidad de la República, Uruguay </li> 
 <li>  <b>Sainyam Galhotra</b>, Cornell University, USA </li>
