--- a/index.html
+++ b/index.html
@@ -223,9 +223,10 @@
 <li>  <b>Panagiotis Karras</b>, University of Copenhagen, Denmark </li> 
 <li>  <b>Haridimos Kondylakis</b>, ICS-FORTH, Greece </li> 
 <li>  <b>Longbin Lai</b>, Alibaba Group, China </li> 
+<li>  <b>Silviu Maniu</b>, Université Grenoble Alpes, LIG, CNRS, France </li> 
 <li>  <b>Ioana Manolescu</b>, INRIA, Institut Polytechnique de Paris, France </li> 
 <li>  <b>Victor Marsault</b>, Université Gustave Eiffel, CNRS, LIGM, France </li> 
-<li>  <b>Andrea Mauri</b>, Université Lyon 1, CNRS, LIRIS, France </li> 
+<li>  <b>Andrea Mauri</b>, Université Lyon 1, LIRIS, CNRS, France </li> 
 <li>  <b>Amine Mhedhbi</b>, École Polytechnique de Montréal, Canada </li> 
 <li>  <b>Davide Mottin</b>, Aarhus University, Denmark </li> 
 <li>  <b>Serafeim Papadias</b>, TU Berlin, Germany </li> 
@@ -236,7 +237,7 @@
 <li>  <b>Semih Salihoglu</b>, University of Waterloo, Kùzu, Canada </li> 
 <li>  <b>Petra Selmer</b>, Bloomberg, UK </li> 
 <li>  <b>Dominik Tomaszuk</b>, University of Bialystok, Poland </li> 
-<li>  <b>Riccardo Tommasini</b>, INSA Lyon, CNRS, LIRIS, France </li> 
+<li>  <b>Riccardo Tommasini</b>, INSA Lyon, LIRIS, CNRS, France </li> 
 <li>  <b>Georgia Troullinou</b>, Université Grenoble Alpes, France </li> 
 <li>  <b>Ana Lucia Varbanescu</b>, University of Amsterdam, The Netherlands </li> 
 <li>  <b>Genoveva Vargas-Solar</b>, CNRS, Université Lyon 1, LIRIS, France </li> 
