--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="col-full">
             <h2><a id="pc"></a>Program Committee</h2>
             <ul>
-<li>  <b>Shubhangi Agarwal</b>, Université Lyon 1, France </li> 
+<li>  <b>Shubhangi Agarwal</b>, Université Lyon 1, LIRIS, CNRS, France </li> 
 <li>  <b>Renzo Angles</b>, Universidad de Talca, Chile </li> 
 <li>  <b>Amitabha Bagchi</b>, Indian Institute of Technology, India </li> 
 <li>  <b>Srikanta Bedathur</b>, Indian Institute of Technology, India </li> 
@@ -236,6 +236,7 @@
 <li>  <b>Yuya Sasaki</b>, Osaka University, Japan </li> 
 <li>  <b>Semih Salihoglu</b>, University of Waterloo, Kùzu, Canada </li> 
 <li>  <b>Petra Selmer</b>, Bloomberg, UK </li> 
+<li>  <b>Hrishikesh Terdalkar</b>,Université Lyon 1, LIRIS, CNRS, France </li>		   
 <li>  <b>Dominik Tomaszuk</b>, University of Bialystok, Poland </li> 
 <li>  <b>Riccardo Tommasini</b>, INSA Lyon, LIRIS, CNRS, France </li> 
 <li>  <b>Georgia Troullinou</b>, Université Grenoble Alpes, France </li> 
