--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 <li>  <b>Kaustubh Beedkar</b>, Indian Institute of Technology, India </li> 
 <li>  <b>Yang Cao</b>, University of Edinburgh, UK </li> 
 <li>  <b>James Clarkson</b>, Neo4j, USA </li> 
-<li>  <b>Sourav Dutta</b>, Huawei Research, Ireland </li> 
+<li>  <b>Sourav Dutta</b>, Huawei Research Center, Ireland </li> 
 <li>  <b>Lisa Ehrlinger</b>, Hasso-Plattner-Institut, Germany </li> 	 
 <li>  <b>Lorena Etcheverry</b>, Universidad de la República, Uruguay </li> 
 <li>  <b>Sainyam Galhotra</b>, Cornell University, USA </li>
@@ -223,6 +223,7 @@
 <li>  <b>Panagiotis Karras</b>, University of Copenhagen, Denmark </li> 
 <li>  <b>Haridimos Kondylakis</b>, ICS-FORTH, Greece </li> 
 <li>  <b>Longbin Lai</b>, Alibaba Group, China </li> 
+<li>  <b>Sahil Manchanda</b>, Pocket FM Data Science Team, India </li> 
 <li>  <b>Silviu Maniu</b>, Université Grenoble Alpes, LIG, CNRS, France </li> 
 <li>  <b>Ioana Manolescu</b>, INRIA, Institut Polytechnique de Paris, France </li> 
 <li>  <b>Victor Marsault</b>, Université Gustave Eiffel, CNRS, LIGM, France </li> 
