--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
     <section class="row">
         <h2 id="previous">Past Workshops</h2>
-        <p>GRADES-NDA is in its eigth edition, and had successful joint meetings co-located with ACM SIGMOD/PODS from 2018 to 2024. Specifically, it is the merger of the GRADES and NDA workshops, which were each independently organized and successfully held at previous ACM SIGMOD/PODS conferences, GRADES since 2013 and NDA since 2017. The organizers of GRADES and NDA mutually agreed upon to aim for a joint meeting from 2018 onwards.</p></br>
+        <p>GRADES-NDA is in its eigth edition, and had successful joint meetings co-located with ACM SIGMOD/PODS from 2018 to 2024. Specifically, it is the merger of the GRADES and NDA workshops, which were each independently organized and successfully held at previous ACM SIGMOD/PODS conferences: GRADES (since 2013) and NDA (since 2017). The organizers of GRADES and NDA mutually agreed upon to aim for a joint meeting from 2018 onwards.</p></br>
         <div class="col" style="width:30%">
             <h2>GRADES-NDA</h2>
             <ul>
