--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                 <a href="https://www.amazon.com/" class="col-3"><img src="img/amazon-logo.png" alt="Amazon" width="200"></a>
                 <a href="https://www.bloomberg.com" class="col-3"><img src="img/logo-bloomberg.svg" alt="Bloomberg" width="200"></a>
           <!--      <a href="https://neo4j.com/" class="col-3"><img src="img/google.png" alt="Google" width="200"></a> -->
-                <a href="https://neo4j.com/" class="col-3"><img src="img/microsoft-logo.png" alt="Microsoft" width="200"></a>
+                <a href="https://www.microsoft.com" class="col-3"><img src="img/microsoft-logo.png" alt="Microsoft" width="200"></a>
                 <a href="https://neo4j.com/" class="col-3"><img src="img/neo4j-logo.png" alt="Neo4j" width="200"></a> 
                 <a href="https://relational.ai/" class="col-3"><img src="img/Logo-RAI-Color-4x.png" alt="RelationalAI"  width="300"></a>
                 <a href="https://www.sap.com/" class="col-3"><img src="img/sap-logo.png" alt="SAP" width="150"></a>
