--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </ul> </br>
 
             <p>Submissions must follow the latest 2-column <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a> (<a href="https://www.overleaf.com/latex/templates/association-for-computing-machinery-acm-sig-proceedings-template/bmvfhcdnxfty">Overleaf template</a>). </p>
-            <p>Reviewing will be double-anonymous, for which the submissions must be anonymized by following the same anonymity requirements as for <a href="https://2025.sigmod.org/calls_papers_sigmod_research.shtml">regular track papers at the SIGMOD 2025 conference</a>. </p>
+            <p>Reviewing will be double-anonymous, for which the submissions must be anonymized by following the same anonymity requirements as for <a href="https://2025.sigmod.org/calls_papers_sigmod_research.shtml">regular track papers at the SIGMOD/PODS 2025 conference</a>. </p>
             <p>You can use the following LaTeX command to compile your paper without author names:</p>
             <p><code>\documentclass[sigconf, anonymous, review]{acmart}</code>.</p>
             </p>
