--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 		<div class="col">
 			<h2><a id="dates"></a>Important Dates</h2>
 			<ul>
-                <li>Abstract Submission: March 17, 2025</li>
-                <li>Paper Submission: March 22, 2025</li>
+                <li>Abstract Submission: <s>March 17, 2025</s> March 24, 2025</li>
+                <li>Paper Submission: <s>March 22, 2025</s>March 30, 2025</li>
                 <li>Notifications: April 18, 2025</li>
                 <li>Camera Ready Submission: May 2, 2025</li>
                 <li>Workshop Date: June 27, 2025</li>
