--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 			<h2><a id="dates"></a>Important Dates</h2>
 			<ul>
                 <li>Abstract Submission: <s>March 17, 2025</s> March 24, 2025</li>
-                <li>Paper Submission: <s>March 22, 2025</s> <s>March 31, 2025</s> April 4, 2025 (firm)</li>
+                <li>Paper Submission: <s>March 31, 2025</s> April 4, 2025 (firm)</li>
                 <li>Notifications: April 18, 2025</li>
                 <li>Camera Ready Submission: May 2, 2025</li>
                 <li>Workshop Date: June 27, 2025</li>
