--- a/index.html
+++ b/index.html
@@ -178,10 +178,9 @@
                 <li><b>Archival</b> : Accepted papers under this category will be published by the ACM, indexed by DBLP, and will be available in the ACM DL.</li>
             <ul>
                 <li>Full papers should be a maximum of 8 pages, excluding references and appendix.</li>
-                <li>Short papers and demonstration papers should be a maximum of 4 pages, excluding references and appendix.</li>
+                <li>Short papers, demonstration papers, and vision papers should be a maximum of 4 pages, excluding references and appendix.</li>
                 <li>Case studies should be a maximum of 4 pages, excluding references and appendix.</li>
             </ul> </br>
-
                 <li>🆕 <b>Non-archival</b> : Accepted papers under this category will not be published in the proceedings, but will be listed on the website.</li>
                 <ul>
                 <li>Papers that are suitable for this category are work-in-progress papers presenting early results.</br>
