--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <ul>
                 <li><b>Archival</b> : Accepted papers under this category will be published by the ACM, indexed by DBLP, and will be available in the ACM DL.</li>
             <ul>
-                <li>Full papers should be a maximum of 8 pages, excluding references and appendix.</li>
+                <li>Regular (long) papers should be a maximum of 8 pages, excluding references and appendix.</li>
                 <li>Short papers, demonstration papers, and vision papers should be a maximum of 4 pages, excluding references and appendix.</li>
                 <li>Case studies should be a maximum of 4 pages, excluding references and appendix.</li>
             </ul> </br>
