--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
                 </ul>       
             </ul> </br>
 
+	    <p> Please indicate the submission type in the title of the paper, e.g., "[Regular Research Paper] XXX", "[Short Research Paper] XXX", "[Demo] XXX", "[Case-Study] XXX", "[Vision] XXX", 
+		    "[Work-in-progress] XXX" </p>
             <p>Submissions must follow the latest 2-column <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a> (<a href="https://www.overleaf.com/latex/templates/association-for-computing-machinery-acm-sig-proceedings-template/bmvfhcdnxfty">Overleaf template</a>). </p>
             <p>Reviewing will be double-anonymous, for which the submissions must be anonymized by following the same anonymity requirements as for <a href="https://2025.sigmod.org/calls_papers_sigmod_research.shtml">regular track papers at the SIGMOD/PODS 2025 conference</a>. </p>
             <p>You can use the following LaTeX command to compile your paper without author names:</p>
