--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
             </ul>
         </div>
     </section>
-
-    <section class="row">
+-->	
+	<section class="row">
         <div class="col-full">
             <h2><a id="travel"></a>Student Travel Awards</h2>
             <p>Thanks to the generous support of our Sponsors, we are offering awards for selected students to attend GRADES-NDA and SIGMOD in person. 
@@ -291,15 +291,15 @@
 		    Awardees are expected to register to SIGMOD in-person full conference and attend the GRADES-NDA Workshop 
 		    and later the SIGMOD conference. Students will have to make their own arrangements for travel and accommodation. 
 		    These awards are only for students who can attend in person. 
-		    If you cannot attend in person, we advise you to check with <a href="https://2023.sigmod.org/grants.shtml">the SIGMOD travel awards committee</a>.</p>
+		    If you cannot attend in person, we advise you to check with <a href="https://2025.sigmod.org/travel_awards.shtml">the SIGMOD travel awards committee</a>.</p>
             <p><b>Eligibility:</b> Applicants need to be a full-time undergraduate or graduate student. 
-		    You  do not need to have an accepted paper to GRADES-NDA (or SIGMOD) to be eligible. 
+		    You do not need to have an accepted paper to GRADES-NDA (or SIGMOD) to be eligible. 
 		    We will primarily prioritize students whose advisors cannot provide financial support. 
 		    We will also prioritize students who have a GRADES-NDA accepted paper, who are not from North America and Europe, 
 		    as well as female and minority students. </p>
-            <p><b>Application Procedure:</b> To apply for a grant, the student must email the necessary materials to GRADES-NDA chairs 
-		    (please email both Olaf and Yuichi) by <b>April 22</b>. We will notify applicants by <b>April 29</b>.
-            Please submit the following information in a single PDF file with your application:</p>
+            <p><b>Application Procedure:</b> To apply for a grant, the student must email the necessary materials to GRADES-NDA chairs (at our email address: gradesnda2025@easychair.org) by <b>May 23</b>. 
+		    We will notify applicants by <b>May 30</b>.
+                    Please submit the following information in a single PDF file with your application:</p>
             <ul>
                 <li>Your full name, school, and email address.</li>
                 <li>Your advisor's full name and email address.</li>
@@ -309,7 +309,7 @@
             </ul>
         </div>
     </section>
--->
+
 
     <section class="row">
         <h2 id="previous">Past Workshops</h2>
