--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <nav>
         <ul>
-<!--             <li><a href="#accepted" class="bordered">Accepted Papers</a></li> -->
+           <li><a href="#accepted" class="bordered">Accepted Papers</a></li> 
 <!--             <li><a href="#">Registration</a></li>-->
             <li><a href="#dates">Important Dates</a></li>
             <li><a href="#program" class="bordered">Program</a></li>
