--- a/index.html
+++ b/index.html
@@ -139,7 +139,24 @@
  \end{itemize}
  \item \emph{Vision papers} describing potential applications and benefits of graph management.
 -->
+<section class="row">
+		<div class="col">
+			<h2><a id="dates"></a>Accepted Papers</h2>
+			<ul>
+                <li>Janik Hammerer and Wim Martens. A Compendium of Regular Expression Shapes in SPARQL Queries.</li>
+                <li>Simon Grätzer, Lars Heling and Pavel Klinov. BARQ: A Vectorized SPARQL Query Execution Engine.</li>
+		<li>Leonid Libkin, Cristina Sirangelo and Deniz Yilmaz. Extending Pattern Matching Queries in Property Graphs with Interpreted Predicates.</li>
+		<li>Naima Abrar Shami and Vasiliki Kalavri. Bridging GNN Inference and Dataflow Stream Processing: Challenges and Opportunities.</li>
+		<li>Chongyang Xu and Laurent Bindschaedler. Everything You Wanted to Know About Graph Neural Network Partitioning (But Were Afraid to Ask).</li>
+		<li>Bishwajit Bhattacharjee, Nafis Ahmed, Sujaya Maiyya and Renee Miller. Towards oblivious property graph databases.</li>
+		<li>Hrishikesh Terdalkar, Angela Bonifati and Andrea Mauri. Graph Repairs with LLMs: An Explorative Study.</li>
+		<li>Hadar Rotschield and Liat Peterfreund. [Short Research Paper] Towards Cross-Model Efficiency in SQL/PGQ.</li>
+			</ul>
 
+</section>
+
+
+	
 	<section class="row">
 		<div class="col">
 			<h2><a id="dates"></a>Important Dates</h2>
