--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 			<ul>
                 <li>Abstract Submission: <s>March 17, 2025</s> March 24, 2025</li>
                 <li>Paper Submission: <s>March 31, 2025</s> April 4, 2025 (firm)</li>
-                <li>Notifications: May 1, 2025</li>
+                <li>Notifications: <s>May 1, 2025</s></li>
                 <li>Camera Ready Submission: May 11, 2025</li>
                 <li>Workshop Date: June 27, 2025</li>
 			</ul>
