--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
  \item \emph{Vision papers} describing potential applications and benefits of graph management.
 -->
 <section class="row">
-		<div class="col">
+		<div class="col-full">
 			<h2><a id="dates"></a>Accepted Papers</h2>
 			<ul>
                 <li>Janik Hammerer and Wim Martens. A Compendium of Regular Expression Shapes in SPARQL Queries.</li>
