--- a/index.html
+++ b/index.html
@@ -141,16 +141,25 @@
 -->
 <section class="row">
 		<div class="col-full">
-			<h2><a id="dates"></a>Accepted Papers</h2>
+			<h2><a id="dates"></a>Accepted Papers (Archival)</h2>
 			<ul>
-                <li>Janik Hammerer and Wim Martens. A Compendium of Regular Expression Shapes in SPARQL Queries.</li>
-                <li>Simon Grätzer, Lars Heling and Pavel Klinov. BARQ: A Vectorized SPARQL Query Execution Engine.</li>
-		<li>Leonid Libkin, Cristina Sirangelo and Deniz Yilmaz. Extending Pattern Matching Queries in Property Graphs with Interpreted Predicates.</li>
 		<li>Naima Abrar Shami and Vasiliki Kalavri. Bridging GNN Inference and Dataflow Stream Processing: Challenges and Opportunities.</li>
+		<li>Bishwajit Bhattacharjee, Nafis Ahmed, Sujaya Maiyya, and Renee Miller. Towards oblivious property graph databases.</li>
+		<li>Simon Grätzer, Lars Heling, and Pavel Klinov. BARQ: A Vectorized SPARQL Query Execution Engine.</li>
+                <li>Janik Hammerer and Wim Martens. A Compendium of Regular Expression Shapes in SPARQL Queries.</li>
+		<li>Leonid Libkin, Cristina Sirangelo, and Deniz Yilmaz. Extending Pattern Matching Queries in Property Graphs with Interpreted Predicates.</li>
+		<li>Hrishikesh Terdalkar, Angela Bonifati, and Andrea Mauri. Graph Repairs with LLMs: An Explorative Study.</li>
 		<li>Chongyang Xu and Laurent Bindschaedler. Everything You Wanted to Know About Graph Neural Network Partitioning (But Were Afraid to Ask).</li>
-		<li>Bishwajit Bhattacharjee, Nafis Ahmed, Sujaya Maiyya and Renee Miller. Towards oblivious property graph databases.</li>
-		<li>Hrishikesh Terdalkar, Angela Bonifati and Andrea Mauri. Graph Repairs with LLMs: An Explorative Study.</li>
 		<li>Hadar Rotschield and Liat Peterfreund. [Short Research Paper] Towards Cross-Model Efficiency in SQL/PGQ.</li>
+			</ul>
+
+			<h2>Accepted Papers (Non-Archival)</h2>
+			<ul>
+			<li>Shaoshuai Du, Joze Rozanec, Ana Lucia Varbanescu, and Andy D. Pimentel. Understanding Streaming Graph Processing Systems: a Comparative Study of Models, Performance, and Trade-offs.</li>
+			<li>Cheng Huang, Johannes Langguth, Davide Mottin, and Ira Assent. GCore: A Fast GPU-parallelized Approach to D-Core Decomposition.</li>
+			<li>Dmytro Lopushanskyy and Borun Shi. Graph Neural Networks on Graph Databases.</li>
+			<li>Larissa Shimomura, George Fletcher, Hiroaki Shiokawa, Toshiyuki Amagasa, and Md Abu Marjan. Towards Documentation Guidelines for Property Graphs.</li>
+			<li>Srinitish Srinivasan and Omkumar Cu. Lorentzian Graph Isomorphic Network</li>
 			</ul>
 
 </section>
