--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			<h2><a id="dates"></a>Accepted Papers (Archival)</h2>
 			<ul>
 		<li>Naima Abrar Shami and Vasiliki Kalavri. Bridging GNN Inference and Dataflow Stream Processing: Challenges and Opportunities.</li>
-		<li>Bishwajit Bhattacharjee, Nafis Ahmed, Sujaya Maiyya, and Renee Miller. Towards oblivious property graph databases.</li>
+		<li>Bishwajit Bhattacharjee, Nafis Ahmed, Sujaya Maiyya, and Renee Miller. Towards Oblivious Property Graph Databases.</li>
 		<li>Simon Grätzer, Lars Heling, and Pavel Klinov. BARQ: A Vectorized SPARQL Query Execution Engine.</li>
                 <li>Janik Hammerer and Wim Martens. A Compendium of Regular Expression Shapes in SPARQL Queries.</li>
 		<li>Leonid Libkin, Cristina Sirangelo, and Deniz Yilmaz. Extending Pattern Matching Queries in Property Graphs with Interpreted Predicates.</li>
