--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <li>Vision and systems papers  &ndash;  potential or real applications of graph management, especially in the era of large language models.</li>
             </ul>
             <br>
-            <p> Accepted papers will be published by ACM, indexed by DBLP, and will be available in the ACM DL.</p>
+            <p> pers will be published by ACM, indexed by DBLP, and will be available in the ACM DL.</p>
         </div>
     </section>
 
@@ -141,7 +141,7 @@
 -->
 <section class="row">
 		<div class="col-full">
-			<h2><a id="dates"></a>Accepted Papers (Archival)</h2>
+			<h2><a id="accepted"></a>Accepted Papers (Archival)</h2>
 			<ul>
 		<li>Naima Abrar Shami and Vasiliki Kalavri.</br> <b>Bridging GNN Inference and Dataflow Stream Processing: Challenges and Opportunities</b>.</li>
 		<li>Bishwajit Bhattacharjee, Nafis Ahmed, Sujaya Maiyya, and Renee Miller. </br> <b>Towards Oblivious Property Graph Databases</b>.</li>
