--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
 	<section class="row">
         <div class="col-full">
             <h2><a id="travel"></a>Student Travel Awards</h2>
-            <p>Thanks to the generous support of our Sponsors, we are offering awards for selected students to attend GRADES-NDA and SIGMOD in person. 
-		    Each awardee will receive a stipend to partially cover the expense to attend the conference in-person. 
-		    Awardees are expected to register to SIGMOD in-person full conference and attend the GRADES-NDA Workshop 
-		    and later the SIGMOD conference. Students will have to make their own arrangements for travel and accommodation. 
+            <p>Thanks to the generous support of our Sponsors, we are offering awards for selected students to attend GRADES-NDA@SIGMOD in person. 
+		    Each awardee will receive a stipend to <b>partially cover</b>b> the expense to attend the conference in-person. 
+		    Awardees are expected to register and attend the GRADES-NDA Workshop 
+		    and encouraged to attend the SIGMOD conference. Students will have to make their own arrangements for travel and accommodation. 
 		    These awards are only for students who can attend in person. 
 		    If you cannot attend in person, we advise you to check with <a href="https://2025.sigmod.org/travel_awards.shtml">the SIGMOD travel awards committee</a>.</p>
             <p><b>Eligibility:</b> Applicants need to be a full-time undergraduate or graduate student. 
