--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         <div class="col-full">
             <h2><a id="travel"></a>Student Travel Awards</h2>
             <p>Thanks to the generous support of our Sponsors, we are offering awards for selected students to attend GRADES-NDA@SIGMOD in person. 
-		    Each awardee will receive a stipend to <b>partially cover</b>b> the expense to attend the conference in-person. 
+		    Each awardee will receive a stipend to <b>partially cover</b> the expense to attend the conference in-person. 
 		    Awardees are expected to register and attend the GRADES-NDA Workshop 
 		    and encouraged to attend the SIGMOD conference. Students will have to make their own arrangements for travel and accommodation. 
 		    These awards are only for students who can attend in person. 
