--- a/index.html
+++ b/index.html
@@ -318,10 +318,10 @@
 		    and encouraged to attend the SIGMOD conference. Students will have to make their own arrangements for travel and accommodation. 
 		    These awards are only for students who can attend in person. 
 		    If you cannot attend in person, we advise you to check with <a href="https://2025.sigmod.org/travel_awards.shtml">the SIGMOD travel awards committee</a>.</p>
-            <p><b>Eligibility:</b> Applicants need to be a full-time undergraduate or graduate student. 
+            <p><b>Eligibility:</b> Applicants need to be full-time undergraduate or graduate students. 
 		    You do not need to have an accepted paper to GRADES-NDA (or SIGMOD) to be eligible. 
 		    We will primarily prioritize students whose advisors cannot provide financial support. 
-		    We will also prioritize students who have a GRADES-NDA accepted paper, who are not from North America and Europe, 
+		    We will also prioritize students who have a GRADES-NDA accepted paper, who are not from North America or Europe, 
 		    as well as female and minority students. </p>
             <p><b>Application Procedure:</b> To apply for a grant, the student must email the necessary materials to GRADES-NDA chairs (at our email address: gradesnda2025@easychair.org) by <b>May 23</b>. 
 		    We will notify applicants by <b>May 30</b>.
