--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <li>Vision and systems papers  &ndash;  potential or real applications of graph management, especially in the era of large language models.</li>
             </ul>
             <br>
-            <p> pers will be published by ACM, indexed by DBLP, and will be available in the ACM DL.</p>
+            <p> Accepted archival papers will be published by ACM, indexed by DBLP, and will be available in the ACM DL.</p>
         </div>
     </section>
 
