--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		<li>Simon Grätzer, Lars Heling, and Pavel Klinov.</br> <b>BARQ: A Vectorized SPARQL Query Execution Engine</b>.</li>
                 <li>Janik Hammerer and Wim Martens.</br> <b>A Compendium of Regular Expression Shapes in SPARQL Queries</b>.</li>
 		<li>Leonid Libkin, Cristina Sirangelo, and Deniz Yilmaz.</br> <b>Extending Pattern Matching Queries in Property Graphs with Interpreted Predicates</b>.</li>
-		<li>Hrishikesh Terdalkar, Angela Bonifati, and Andrea Mauri.</br> <b>Graph Repairs with LLMs: An Explorative Study</b>.</li>
+		<li>Hrishikesh Terdalkar, Angela Bonifati, and Andrea Mauri.</br> <b>Graph Repairs with LLMs: An Empirical Study</b>.</li>
 		<li>Chongyang Xu and Laurent Bindschaedler.</br> <b>Everything You Wanted to Know About Graph Neural Network Partitioning (But Were Afraid to Ask)</b>.</li>
 		<li>Hadar Rotschield and Liat Peterfreund.</br> [Short Research Paper] <b>Towards Cross-Model Efficiency in SQL/PGQ</b>.</li>
 			</ul> </br>
