--- a/index.html
+++ b/index.html
@@ -185,20 +185,20 @@
         </p>
 
         <p class="session">
-            <span class="time">8:15AM-8:55AM</span>
+            <span class="time">8:15-8:55</span>
             <span class="stitle">Session 1</span>
         </p>
         <ul>
             <li class="paper">
-                <span class="title">Everything You Wanted to Know About Graph Neural Network Partitioning (But Were Afraid to Ask).</span>
+                <span class="title">[08:15-08:30] Everything You Wanted to Know About Graph Neural Network Partitioning (But Were Afraid to Ask).</span>
                 <span class="authors">Chongyang Xu and Laurent Bindschaedler.</span>
             </li>
             <li class="paper">
-                <span class="title">Bridging GNN Inference and Dataflow Stream Processing: Challenges and Opportunities.</span>
+                <span class="title">[8:30-8:45] Bridging GNN Inference and Dataflow Stream Processing: Challenges and Opportunities.</span>
                 <span class="authors">Naima Abrar Shami and Vasiliki Kalavri.</span>
             </li>
             <li class="paper">
-                <span class="title">GCore: A Fast GPU-parallelized Approach to D-Core Decomposition.</span>
+                <span class="title">[8:45-8:55] GCore: A Fast GPU-parallelized Approach to D-Core Decomposition.</span>
                 <span class="authors">Cheng Huang, Johannes Langguth, Davide Mottin, and Ira Assent.</span>
             </li>
          </ul>
@@ -208,7 +208,7 @@
         </p>
 
         <p class="session">
-            <span class="time">9:00AM-09:45AM</span>
+            <span class="time">9:00-09:45</span>
             <span class="stitle">A Decade of Measuring and Modeling Human Proximity Networks: Lessons Learned and Open Challenges - <i>Ciro Cattuto</i></span><img src="img/ciro.jpeg" alt="" height="200" width="185" id="bio-pic" />
             <span class="abstract"><b>Abstract:</b> 
                 Digital technologies allow us to quantify many important human behaviors and have revolutionized how we think about human mobility, opening new avenues for research in computational social science, urban mobility, epidemiology, and more. This talk will focus on human proximity networks measured using wearable proximity sensors, reviewing the decade-long experience of the SocioPatterns collaboration. We will discuss the evolution and state of the art of measurement technology and the lessons learned from more than a decade of data collection experiences in various real-world environments, including schools, hospitals, households, low-resource rural settings, and more. We will illustrate the complex features and emergent patterns of time-resolved proximity networks and discuss how ideas and methods from network science and machine learning can support their modeling in important application scenarios. We will highlight open challenges in the low-dimensional representation of time-resolved interaction networks and in the development of generative models of realistic interaction data.
@@ -219,20 +219,20 @@
         </p>
 
         <p class="session">
-            <span class="time">9:45AM-10:30AM</span>
+            <span class="time">9:45-10:30</span>
             <span class="stitle">Session 2</span>
         </p>
         <ul>
             <li class="paper">
-                <span class="title">Extending Pattern Matching Queries in Property Graphs with Interpreted Predicates.</span>
+                <span class="title">[9:45-10:00] Extending Pattern Matching Queries in Property Graphs with Interpreted Predicates.</span>
                 <span class="authors">Leonid Libkin, Cristina Sirangelo, and Deniz Yilmaz.</span>
             </li>
             <li class="paper">
-                <span class="title">Graph Repairs with LLMs: An Empirical Study.</span>
+                <span class="title">[10:00-10:15] Graph Repairs with LLMs: An Empirical Study.</span>
                 <span class="authors">Hrishikesh Terdalkar, Angela Bonifati, and Andrea Mauri.</span>
             </li>
             <li class="paper">
-                <span class="title">Towards Oblivious Property Graph Databases.</span>
+                <span class="title">[10:15-10:30] Towards Oblivious Property Graph Databases.</span>
                 <span class="authors">Bishwajit Bhattacharjee, Nafis Ahmed, Sujaya Maiyya, and Renee Miller.</span>
             </li>
         </ul>
@@ -242,7 +242,7 @@
         </p>
 
         <p class="session">
-            <span class="time">11:00AM-11:45AM</span>
+            <span class="time">11:00-11:45</span>
             <span class="stitle">Not all Neighbors Agree: Graph Learning Beyond Homophily - <i>Danai Koutra</i></span><img src="img/danai.jpeg" alt="" width="200" height="222" id="bio-pic-2" />
             <span class="abstract"><b>Abstract:</b> 
                 Graph neural networks (GNNs) have become a cornerstone of graph-based machine learning, demonstrating strong performance across a variety of applications spanning recommendation systems, molecular analysis, and social networks. While a wide variety of GNN models have been proposed, most of them perform best in graphs that exhibit the property of homophily, in which linked nodes often belong to the same class or have similar features, echoing the adage “birds of a feather flock together”. 
@@ -258,20 +258,20 @@
         </p>
 
         <p class="session">
-            <span class="time">11:50AM-12:30AM</span>
+            <span class="time">11:50-12:30</span>
             <span class="stitle">Session 3</span>
         </p>
         <ul>
             <li class="paper">
-                <span class="title">A Compendium of Regular Expression Shapes in SPARQL Queries.</span>
+                <span class="title">[11:50:12:05] A Compendium of Regular Expression Shapes in SPARQL Queries.</span>
                 <span class="authors">Janik Hammerer and Wim Martens.</span>
             </li>
             <li class="paper">
-                <span class="title">BARQ: A Vectorized SPARQL Query Execution Engine.</span>
+                <span class="title">[12:05-12:20] BARQ: A Vectorized SPARQL Query Execution Engine.</span>
                 <span class="authors">Simon Grätzer, Lars Heling, and Pavel Klinov.</span>
             </li>
             <li class="paper">
-                <span class="title">Towards Cross-Model Efficiency in SQL/PGQ.</span>
+                <span class="title">[12:20-12:30] Towards Cross-Model Efficiency in SQL/PGQ.</span>
                 <span class="authors">Hadar Rotschield and Liat Peterfreund.</span>
             </li>
         </ul>
@@ -281,7 +281,7 @@
         </p>
 
         <p class="session">
-            <span class="time">2:00PM-3:00PM</span>
+            <span class="time">14:00-15:00</span>
             <span class="stitle">GQL in academia: a progress report - <i>Leonid Libkin</i></span><img src="img/leonid.jpeg" alt="" width="200" height="222" id="bio-pic-2" />
             <span class="abstract"><b>Abstract:</b> 
                 The GQL standard was introduced just over a year ago, following the earlier release of SQL/PGQ — both based on a shared graph pattern-matching. Their design was primarily driven by industry, with academia largely responding in its wake. In the short time that was available, we have created formal models of GQL and PGQ, differing in how closely they adhere to the standards, and used them to analyze both languages. This talk will provide an overview of these models and recent insights into the expressive power of GQL queries, pointing out current limitations and suggesting research directions for future improvements of graph query standards.
@@ -290,8 +290,8 @@
                 Leonid Libkin is a professor of computer science at the University of Edinburgh and query language researcher at RelationalAI; he is also holding part-time industrial chair position at Université Paris-Cité. He was previously scientific advisor to Neo4j, professor at the University of Toronto, at École Normale Supérieure, and member of research staff at Bell Laboratories in Murray Hill. He received his PhD from the University of Pennsylvania in 1994. His main research interests are in the areas of data management and logic in computer science. He has written five books and over 250 technical papers. His awards include a Marie Curie Chair Award, a Royal Society Wolfson Research Merit Award, and eight Best Paper Awards. He has chaired program committees of major database and logic conferences (PODS, LICS, ICDT), and served as chair of the 2010 Federated Logic Conference and general chair of PODS. He is an ACM fellow, a fellow of the Royal Society of Edinburgh, and a member of Academia Europaea.
                 <ul>
                     <li class="paper">
-                        <span class="title">Rel: A Programming Language for Relational Data (Sponsor Talk).</span>
-                        <span class="authors">Wim Martens.</span>
+                        <span class="title">[14:45-15:00] Sponsor Talk.</span>
+                        <span class="authors">TBA.</span>
                     </li>
                  </ul>
             </span>
@@ -302,7 +302,7 @@
         </p>
 
         <p class="session">
-            <span class="time">3:30PM-4:30PM</span>
+            <span class="time">15:30-16:30</span>
             <span class="stitle">Session 4 (Sponsor Talks)</span>
         </p>
 
@@ -312,6 +312,7 @@
 
         <br>
         <p>Posters:</p>
+	    All of the above papers will also feature corresponding posters. In addition, we will display the following works:
         <ul>
             <li class="paper">
                 <span class="title">Understanding Streaming Graph Processing Systems: a Comparative Study of Models, Performance, and Trade-offs.</span>
