--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
         <br>
         <p>Posters:</p>
-	    <b></b>All of the above papers will also feature corresponding posters. In addition, we will display the following works:</b>
+	    <b>All of the above papers will also feature corresponding posters. In addition, we will display the following works:</b>
 	    <br>
 	    <br>
         <ul>
